Test_Case/FedChat/kubernetes/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fedchat
  labels:
    name: fedchat
    classification: moderate
